<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="set">Set</string>
    <string name="app_name">Fast Messenger Facebook</string>
    <string name="app_launcher_name">A Fast Messenger Facebook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="feed_back_title">Please give feedback to support us.\nHow was the app for you?</string>
    <string name="action_share">Share</string>
    <string name="action_upgrade_remove_ads">Remove ads</string>
    <string name="action_invite_friends">Invite Facebook friends</string>
    <string name="action_change_background">Chat Background</string>
    <string name="action_delete_chat">Delete this chat</string>
    <string name="action_rename_friend">Rename this friend</string>
    <string name="action_block_friend">Block this friend</string>
    <string name="action_unblock_friend">Unblock this friend</string>
    <string name="action_add_favourite">Add as favourite</string>
    <string name="action_remove_favorite">Remove from favorite</string>
    <string name="action_share_this_app">Share with</string>
      <string name="action_rate_app">Like this app</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="share_message">Fast Messenger for Facebook</string>
    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_notification">Certificate Verification</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>
    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>
    <string name="friend_name_default">Facebook User</string>
    <string name="loading">Loading &#8230;</string>
    <string name="no_result">No friend found</string>
    <string name="no_friend_loaded">No friend loaded yet</string>
    <string name="action_search">Search</string>
    <string name="action_change_state_chat">Change online status</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="sent_time">11h47 pm</string>
    <string name="enter_new_name">Enter new name</string>
    

    <!-- <string name="multiple_space">"    \u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0      "</string> -->
    <string name="multiple_space">"    \u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0      "</string>
    <string name="title_activity_change_chat_back_ground">Select chat background</string>
    <string name="load_avatar_titile">Load avatar picture</string>
    <string name="load_avavtar_caution"> This may slow down connection</string>
    <string name="status_titile">Login invisible</string>
    <string name="chat_welcome_message">Let start chatting with your friends ;)</string>
    <string name="no_message">no message</string>
    
    <string name="change_status_title">Change status</string>
    <string name="online">Online</string>
    <string name="offline">Invisible</string>
    <string name="connecting_message">Connecting &#8230;</string>
    <string name="is_now_online">is now online</string>
    <string name="is_offline">is offline</string>
    <string name="is_online">is online</string>
    <string name="notification_welcome">Chat with your Facebook friends</string>
    <string name="notification_online">Online</string>
    <string name="notification_invisible">Invisible</string>
    <string name="notification_description">Facebook: Go Settings change this</string>
    <string name="added">Added </string>
    <string name="removed">Removed </string>
    <string name="from_block_list"> from block list</string>
    <string name="into_block_list"> into block list</string>
    <string name="block_description">You will not receive notification when new message from this friend coming</string>
    <string name="as_favorite"> as favorite</string>
    <string name="from_favorite_list"> from list favorites</string>
    <string name="favorite_description">You will be notified when favorite friend online</string>
    <string name="login">Login</string>
    <string name="close_connection_message">Connection closed!</string>
    <string name="not_connect">  Connecting &#8230;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connected">Connection okay &#9786;</string>
    <string name="pref_pedding_notification">Pendding notification</string>
    <string name="pref_pedding_notification_description">Allow you to receive message when you\'re not on the app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_store_old_message">Store old message</string>
    <string name="pref_store_old_message_description">Messages will be stored in database after you leave the app</string>
    <string name="store_old_message_key">store_old_message_key</string>
    <string name="load_avatar">load_avatar</string>
    <string name="pref_load_avatar_titile">Load avatar</string>
    <string name="pref_load_avatar_description">Uncheck this if you have slow internet connection</string>
    <string name="pref_change_chat_background">Change chat background</string>
    <string name="pref_upgrade">Upgrade</string>
    <string name="pref_change_ringtone">Notification sounds</string>
    <string name="pref_upgrade_description">Upgrade to remove ads</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="upgraded_notification">Your application is already upgraded!</string>

    <string-array name="pref_list_font_titles">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
    </string-array>
    
    <string-array name="attach_image_choices">
        <item >Browse gallery</item>
        <item >Take a photo</item>
    </string-array>
    
    <string name="good">Good</string>
	<string name="Bad">Not good</string>
	<string name="later">Remind me later</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    
    
    
    
    <!-- activity login -->
    
    
     <string name="title_activity_login">Sign in</string>
        <string name="prompt_email">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in &#8230;</string>
    <string name="login_progress_loading">Loading &#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The password or username you enter is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_internet_connection">Please check your internet connection and retry</string>
    <string name="welcome_message">Welcome to Facebook Text</string>
    <string name="welcome_message_description">Login using your Facebook account</string>
    <string name="connect_server_error">Connection to Facebook server error, please try again</string>
    <string name="cannot_connection">Cannot connect to server, please check your connection and try again </string>
    <string name="login_info_may_wrong">Cannot login, please check you username password and try again</string>
    <string name="cannot_send_message_error">Your connection error, connecting again &#8230; \nIf connection okay, just logout then login again :)</string>
    <string name="cannot_send_request">Sorry, connection error, please try again later &#9786;</string>
    <string name="thank_support_message">Thank you for your support\nIf ads still is showing, please close the app then start again to apply the changes </string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="facebook_help"><u>- Help Centre</u></string> 
    <string name="change_background_confirm">Set this background for <b>%s</b> or all friends?</string>
    <string name="change_background_for_all_user_options">All friends</string>
    <string name="remove_ads_prompt_message">Choose one of following ways to remove ads</string>
    <string name="upgrade_to_remove_ads">Upgrade</string>
    <string name="invite_friends_to_remove_ads">Invite friends</string>
    <string name="invite">Invite</string>
    <string name="invite_friend_failed">Remove ads failed, please try again later!</string>
    <string name="invitaiton_hint_message">Your invitation message...</string>
    <string name="buildin_message_invite">Fast and simple Facebook messenger for Android</string>
    <string name="sorry_no_contact">I am really sorry for this! Since Facebook do not let you login 3rd-party messenger. You could not see your contacts :( \nYou could try with another account or another 3rd-party app to see that. There is nothing I can do about it :( \nYou may want to uninstall it but please do not vote down! I need to feed my cat :(</string>
    <string name="sorry_ttile">Sorry buddy!</string>
    <string name="sorry_okay">That\'s okay</string>
    <string name="share_intent_toast_message">Choose your friend to share</string>
    <!-- for ads -->
    <string name="main_ativity_banner">ca-app-pub-8484240274312605/6181636779</string>
    <string name="chat_activity_banner">ca-app-pub-8484240274312605/9135103177</string>
</resources>
