<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fbtext.MainActivity" >

    <item android:id="@+id/action_change_state"
        android:title="@string/action_change_state_chat"
        android:icon="@drawable/ic_ab_online_user_indicator"
        app:showAsAction="always"/>
    
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search"
          app:showAsAction="always"
          app:actionViewClass="android.support.v7.widget.SearchView" />     
    
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_invite_friends"
        android:orderInCategory="100"
        android:title="@string/action_invite_friends"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_upgrade_remove_ads"
        android:orderInCategory="100"
        android:title="@string/action_upgrade_remove_ads"
        app:showAsAction="never"/>
    
     
    

</menu>
