<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8dce5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:src="@drawable/emo_0213_noboder"
                android:text="facebook"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#3A5795"
                android:textSize="15sp"
                android:text="Login using your Facebook account"
                android:layout_gravity="center_horizontal"/>
            
			


            <TextView
                android:id="@+id/settings_warn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffebe8"
                android:paddingBottom="10dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="10dp"
                android:text="@string/account_wizard_settings_warn"
                android:textColor="#7c3624"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/error_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffebe8"
                android:paddingBottom="10dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="10dp"
                android:text="@string/account_wizard_connection_failed"
                android:textColor="#7c3624"
                android:textSize="14sp"
                android:visibility="gone" />

            <View
                android:id="@+id/error_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="#e87658"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_white_layout_background"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/account_username"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email address or phone number"
                    android:textColorHint="#bcbcbc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eceffb" />
				<LinearLayout android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal">
	                <EditText
	                    android:id="@+id/account_password"
	                    style="@style/LoginEditText"
	                    android:layout_width="0dp"
	                    android:layout_weight="1"
	                    android:layout_height="wrap_content"
	                    android:hint="Password"
	                    android:inputType="textPassword"
	                    android:imeOptions="actionDone"
	                    android:textColorHint="#bcbcbc" />
	                <TextView android:id="@+id/login_show_btn" 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/show"
	                    android:textSize="14sp"
	                    android:textColor="#4286F4"
	                    android:textStyle="bold"
	                    android:padding="10dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eceffb" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:background="@drawable/login_button"
                    android:minHeight="40dp"
                    android:text="@string/action_sign_in_register"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@drawable/selectable_background_facebooktextactionbar"
                android:minHeight="40dp"
 				android:padding="10dp"
                android:text="@string/create_new_account"
                android:textColor="#97a7c8"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/forgot_password_tv"
                    style="@style/LoginForgotPasswordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password" />

                <TextView
                    android:id="@+id/help_tv"
                    style="@style/LoginForgotPasswordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/facebook_help" />
            </LinearLayout>
        </LinearLayout>

        <!--
        <LinearLayout
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:clickable="true"
            android:gravity="center"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="ma"
                android:background="@null"
                android:clickable="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/loading_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/loading"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
        -->
    </RelativeLayout>

</ScrollView>